# RustKafkaAsync-boiler-plate.

./: Cargo.toml  README.md  config.json
src/: config_loaders.rs  error.rs  lib.rs  main.rs  readme.md
src/api/: send_email.rs
src/kafka/: consumer.rs  create_topic.rs  kafka_producer.rs  message.rs  mod.rs
