[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
config = "0.13.3"
derive = "1.0.0"
env_logger = "0.10.0"
flume = "0.10.14"
futures-util = "0.3.28"
log = "0.4.17"
rdkafka = "0.29.0"
serde = "1.0.162"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0" , features = ["rt" ,"macros"]}
derive_more = "0.99.17"
bincode = "1.3.3"
